# ovito-modifiers

./: README.md  modifiers.py  pyproject.toml
ovito-modifiers/: __init__.py
ovito_modifiers/: modifiers.py
