[build-system]
requires = ["hatchling", "numpy", "ovito"]
build-backend = "hatchling.build"

[project]
name = "ovito_modifiers"
version = "0.1.0"
authors = [{ name = "Geordy Jomon", email = "gj82@njit.edu" }]
description = "Custom modifiers using the Ovito python API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
