[build-system]
requires = ["hatchling", "numpy", "ovito", "traits"]
build-backend = "hatchling.build"

[project]
name = "ovito_modifiers"
version = "0.2.0"
authors = [{ name = "Geordy Jomon", email = "gj82@njit.edu" }]
description = "Custom modifiers using the Ovito python API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
